# airflow

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
docker/airflow/: Dockerfile
src/airflow-data/: airflow.cfg
src/dags/: dag_task_1.py  dag_task_2.py  dag_task_3.py
src/dags/dag_task_4/: __init__.py  operator.py
src/dags/dag_task_5/: __init__.py  hook.py  operator.py
src/dags/dag_task_5/sql/: create_table.sql  insert_weather.sql
